# robot_project_code

./: README.md
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_documentation/: CMakeLists.txt  package.xml
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_documentation/desktop/: ram_documentation.desktop.in
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_documentation/sphinx/: contact.rst  display.rst  entry_exit_strategies.rst  fill_trajectory.rst  index.rst  modify_trajectory.rst  path_planning.rst  pose_information.rst  trajectory_information.rst
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_modify_trajectory/: CMakeLists.txt  package.xml
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_modify_trajectory/src/: modify_trajectory.cpp  pose_selector.cpp
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_modify_trajectory/srv/: AddPoses.srv  AddToSelection.srv  GetPosesFromLayer.srv  GetPosesFromLayersList.srv  GetPosesFromTrajectory.srv  GetSelection.srv  ModifySelectedPoses.srv  ReflectSelectedPoses.srv  RotateSelectedPoses.srv  ScaleSelectedPoses.srv  ShiftPoses.srv
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_modify_trajectory/test/: pose_selector_test.cpp
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_msgs/: CMakeLists.txt  package.xml
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_msgs/msg/: AdditiveManufacturingTrajectoryInfo.msg
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_post_processor/: CMakeLists.txt  package.xml
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_post_processor/include/ram_post_processor/: post_processor.hpp
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_post_processor/src/: post_processor.cpp
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_qt_guis/: CMakeLists.txt  package.xml  plugin.xml
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_qt_guis/config/: ram.rviz
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_qt_guis/desktop/: ros_additive_manufacturing.desktop.in
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_qt_guis/include/ram_qt_guis/: display.hpp  entry_exit_strategies.hpp  fill_trajectory.hpp  frames.hpp  modify.hpp  path_planning.hpp  pose.hpp  pose_info.hpp  traj_info.hpp  trajectory_utils.hpp
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_qt_guis/launch/: gui.launch  nodes.launch
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_qt_guis/scripts/: ros_additive_manufacturing.bash.in
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_qt_guis/src/: display.cpp  entry_exit_strategies.cpp  fill_trajectory.cpp  frames.cpp  modify.cpp  path_planning.cpp  pose.cpp  pose_info.cpp  traj_info.cpp  trajectory_utils.cpp
additive_manufacturing_ws/src/ros_additive_manufacturing/ram_qt_guis/src/modify_widgets/: modify_poses.cpp  range_list_selection.cpp
aruco_marker_detection_ws/src/aruco_marker_detection/utils/: CMakeLists.txt  aruco_tracker.cpp
aruco_marker_detection_ws/src/aruco_marker_detection/utils_svm/: CMakeLists.txt
catkin_track/src/multi_sensor/: CMakeLists.txt  CMakeLists.txt.user.94a5457  package.xml
catkin_track/src/multi_sensor/src/: imu_pro_publisher.cpp  imu_publisher.cpp  initialpose_publisher.cpp  ir_state_publisher.cpp  odom_fake.cpp  odom_fusion.cpp  odom_fusion_new.cpp  odom_sub.cpp  path_pub.bak.cpp  path_pub.cpp  rviz_marker.cpp  sonar_publisher.cpp
catkin_track/src/pure_pursuit/: CMakeLists.txt  README.md  package.xml
catkin_track/src/pure_pursuit/cfg/: myntMoveTrackService.cfg
catkin_track/src/pure_pursuit/src/: mynt_move_track_service.cpp  pure_pursuit.cpp  pure_pursuit_alter.cpp
catkin_track/src/pure_pursuit/srv/: myntMoveTrack.srv
cpp_uav_ros/src/cpp_uav/: CMakeLists.txt  tags
cpp_uav_ros/src/cpp_uav/include/: cgutil.hpp  cpp_uav.hpp  tags
cpp_uav_ros/src/cpp_uav/launch/: cpp_uav.rviz  cpp_uav_client.launch  cpp_uav_maps.launch  cpp_uav_service.launch
cpp_uav_ros/src/cpp_uav/maps/: nuode.pgm
cpp_uav_ros/src/cpp_uav/src/: tags  zig_zag.cpp  zig_zag_cpp_client.cpp  zig_zag_cpp_service.cpp  zig_zag_poly.cpp
image_marker_detection/: CMakeLists.txt
image_marker_detection/include/: MarkerStruct.h  bitmatrixrotate.h  bitmatrixtoid.h  config.h  contour.h  decodemarker.h  findmarker.h  hammingdistance.h  imageProc.h  markersubpixel.h  otsu.h  processunitmarker.h
image_marker_detection/src/: bitmatrixrotate.cpp  bitmatrixtoid.cpp  contour.cpp  decodemarker.cpp  findmarker.cpp  hammingdistance.cpp  imageProc_debug.cpp  imageProc_final.cpp  imageProc_release.cpp  markersubpixel.cpp  otsu.cpp  processunitmarker.cpp
ram_path_planning_ws/src/ram_path_planning/: CMakeLists.txt  tags
ram_path_planning_ws/src/ram_path_planning/acd/: acd2d_data.cpp  acd2d_data.h
ram_path_planning_ws/src/ram_path_planning/include/ram_path_planning/: boustrophedon_explorator.h  cgutil.hpp  cpp_uav.hpp  donghong_ding.hpp  donghong_ding_base.hpp  donghong_ding_base_imp.hpp  donghong_ding_imp.hpp
ram_path_planning_ws/src/ram_path_planning/launch/: path_plan_click.launch  path_plan_service.launch
ram_path_planning_ws/src/ram_path_planning/lib/: polypartition.cpp  polypartition.h
ram_path_planning_ws/src/ram_path_planning/maps/: 1.pgm  1.yaml  2.pgm  2.yaml  3.pgm  3.yaml  bad_poselist.pgm  bad_rotate2.pgm  bad_rotate_0.pgm  full.pgm  full.yaml  map.pgm  test.pgm  turtlebot1.yaml
ram_path_planning_ws/src/ram_path_planning/msg/: AdditiveManufacturingTrajectory.msg
ram_path_planning_ws/src/ram_path_planning/rviz/: path_plan.rviz
ram_path_planning_ws/src/ram_path_planning/src/: .boustrophedon_explorator.cpp.swp  Cpp.cpp  Cpp_Acd.cpp  Cpp_Cgal.cpp  Cpp_Cgal_Graph.cpp  Cpp_Cgal_Plan.cpp  Cpp_Convex.cpp  Cpp_Polygon.cpp  SCC.cpp  additive_cpp_node.cpp  boustrophedon_explorator.cpp  line_detection_and_rotation.cpp  lsd.cpp  map_modify_node.cpp  ppl.cpp  ram_cpp_node.cpp
ram_path_planning_ws/src/ram_path_planning/srv/: Cpp.srv  ModifyMap.srv
(+631 files in other folders)
