<?xml version="1.0"?>
<package format="2">
  <name>ram_post_processor</name>
  <version>0.0.3</version>
  <description>Post processor for additive manufacturing</description>

  <author>Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD-3-Clause-Attribution</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>ram_msgs</depend>
  <depend>ram_utils</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>
</package>
